@@ -180,7 +180,7 @@ public class SampleOptimizer extends MROpPlanVisitor {
         rslargs[1] = load.getLFile().getFuncSpec().getCtorArgs()[1];
         FileSpec fs = new FileSpec(predFs.getFileName(),new FuncSpec(loadFunc, rslargs));
         POLoad newLoad = new POLoad(load.getOperatorKey(),load.getRequestedParallelism(), fs, load.isSplittable());
-        newLoad.setSignature(load.getSignature());
+        newLoad.setSignature(predLoad.getSignature());
         try {
             mr.mapPlan.replace(load, newLoad);
             
@@ -196,7 +196,7 @@ public class SampleOptimizer extends MROpPlanVisitor {
         // Second, replace the loader in our successor with whatever the originally used loader was.
         fs = new FileSpec(predFs.getFileName(), predFs.getFuncSpec());
         newLoad = new POLoad(succLoad.getOperatorKey(), succLoad.getRequestedParallelism(), fs, succLoad.isSplittable());
-        newLoad.setSignature(succLoad.getSignature());
+        newLoad.setSignature(predLoad.getSignature());
         try {
             succ.mapPlan.replace(succLoad, newLoad);
         } catch (PlanException e) {
