@@ -315,6 +315,8 @@ PIG-1155: Need to make sure existing loaders work "as is" (daijy)
 PIG-1144: set default_parallelism construct does not set the number of
 reducers correctly (daijy)
 
+PIG-1165: Signature of loader does not set correctly for order by (daijy)
+
 Release 0.5.0
 
 INCOMPATIBLE CHANGES
